gitops/apps/components/example-app-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app-2
  template:
    metadata:
      labels:
        app: example-app-2
    spec:
      containers:
      - name: example-app-2
        image: docker.io/morawskioz/example-app-2:1.0.1
        ports:
        - containerPort: 8080
